@@ -33,7 +33,7 @@ template <
 	>
 class IfElse : public VectorBase< 
 	RTYPE, 
-	( COND_NA && LHS_NA && RHS_NA ) ,
+	( COND_NA || LHS_NA || RHS_NA ) ,
 	IfElse<RTYPE,COND_NA,COND_T,LHS_NA,LHS_T,RHS_NA,RHS_T>
 > {
 public:         
@@ -48,28 +48,274 @@ public:
 	}
 	
 	inline STORAGE operator[]( int i ) const {
-		return get__impl( i, typename Rcpp::traits::integral_constant<bool,COND_NA>() ); 
+		int x = cond[i] ;
+		if( Rcpp::traits::is_na<LGLSXP>(x) ) return x ;
+		if( x ) return lhs[i] ;
+		return rhs[i] ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	const LHS_TYPE& lhs ;
+	const RHS_TYPE& rhs ;
+	
+} ;
+  
+template <
+	int RTYPE, 
+	typename COND_T, 
+	bool LHS_NA , typename LHS_T, 
+	bool RHS_NA , typename RHS_T
+	>
+class IfElse<RTYPE,false,COND_T,LHS_NA,LHS_T,RHS_NA,RHS_T> : public VectorBase< 
+	RTYPE, 
+	( LHS_NA || RHS_NA ) ,
+	IfElse<RTYPE,false,COND_T,LHS_NA,LHS_T,RHS_NA,RHS_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,false,COND_T> COND_TYPE ;
+	typedef Rcpp::VectorBase<RTYPE ,LHS_NA ,LHS_T>  LHS_TYPE ;
+	typedef Rcpp::VectorBase<RTYPE ,RHS_NA ,RHS_T>  RHS_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
+	
+	IfElse( const COND_TYPE& cond_, const LHS_TYPE& lhs_, const RHS_TYPE& rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		if( cond[i] ) return lhs[i] ;
+		return rhs[i] ;
 	}
 	
 	inline int size() const { return cond.size() ; }
 	         
 private:
 	
-	inline STORAGE get__impl( int i, Rcpp::traits::true_type ) const {	
-		int x = cond[i] ;
-		return Rcpp::traits::is_na<LGLSXP>(x) ? Rcpp::traits::get_na<RTYPE>() : ( x ? lhs[i] : rhs[i] ) ;
-	}
-	
-	inline STORAGE get__impl( int i, Rcpp::traits::false_type ) const {	
-		return cond[i] ? lhs[i] : rhs[i] ;
-	}
-	
 	const COND_TYPE& cond ;
 	const LHS_TYPE& lhs ;
 	const RHS_TYPE& rhs ;
 	
 } ;
+
+
+/* ifelse( cond, primitive, Vector ) */
+
+template <
+	int RTYPE, 
+	bool COND_NA, typename COND_T, 
+	bool RHS_NA , typename RHS_T
+	>
+class IfElse_Primitive_Vector : public VectorBase< 
+	RTYPE, 
+	true ,
+	IfElse_Primitive_Vector<RTYPE,COND_NA,COND_T,RHS_NA,RHS_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,COND_NA,COND_T> COND_TYPE ;
+	typedef Rcpp::VectorBase<RTYPE ,RHS_NA ,RHS_T>  RHS_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
 	
+	IfElse_Primitive_Vector( const COND_TYPE& cond_, STORAGE lhs_, const RHS_TYPE& rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		int x = cond[i] ;
+		if( Rcpp::traits::is_na<LGLSXP>(x) ) return x ;
+		if( x ) return lhs ;
+		return rhs[i] ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	STORAGE lhs ;
+	const RHS_TYPE& rhs ;
+	
+} ;
+
+template <
+	int RTYPE, 
+	typename COND_T, 
+	bool RHS_NA , typename RHS_T
+	>
+class IfElse_Primitive_Vector<RTYPE,false,COND_T,RHS_NA,RHS_T> : public VectorBase< 
+	RTYPE, 
+	true,
+	IfElse_Primitive_Vector<RTYPE,false,COND_T,RHS_NA,RHS_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,false,COND_T> COND_TYPE ;
+	typedef Rcpp::VectorBase<RTYPE ,RHS_NA ,RHS_T>  RHS_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
+	
+	IfElse_Primitive_Vector( const COND_TYPE& cond_, STORAGE lhs_, const RHS_TYPE& rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		if( cond[i] ) return lhs ;
+		return rhs[i] ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	STORAGE lhs ;
+	const RHS_TYPE& rhs ;
+	
+} ;
+
+
+
+/* ifelse( cond, Vector, primitive ) */
+
+template <
+	int RTYPE, 
+	bool COND_NA, typename COND_T, 
+	bool LHS_NA , typename LHS_T
+	>
+class IfElse_Vector_Primitive : public VectorBase< 
+	RTYPE, 
+	true ,
+	IfElse_Vector_Primitive<RTYPE,COND_NA,COND_T,LHS_NA,LHS_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,COND_NA,COND_T> COND_TYPE ;
+	typedef Rcpp::VectorBase<RTYPE ,LHS_NA ,LHS_T>  LHS_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
+	
+	IfElse_Vector_Primitive( const COND_TYPE& cond_, const LHS_TYPE& lhs_, STORAGE rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		int x = cond[i] ;
+		if( Rcpp::traits::is_na<LGLSXP>(x) ) return Rcpp::traits::get_na<RTYPE>() ;
+		if( x ) return lhs[i] ;
+		return rhs ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	const LHS_TYPE& lhs ;
+	const STORAGE rhs ;
+	
+} ;
+
+template <
+	int RTYPE, 
+	typename COND_T, 
+	bool LHS_NA , typename LHS_T
+	>
+class IfElse_Vector_Primitive<RTYPE,false,COND_T,LHS_NA,LHS_T> : public VectorBase< 
+	RTYPE, 
+	true ,
+	IfElse_Vector_Primitive<RTYPE,false,COND_T,LHS_NA,LHS_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,false,COND_T> COND_TYPE ;
+	typedef Rcpp::VectorBase<RTYPE ,LHS_NA ,LHS_T>  LHS_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
+	
+	IfElse_Vector_Primitive( const COND_TYPE& cond_, const LHS_TYPE& lhs_, STORAGE rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		if( cond[i] ) return lhs[i] ;
+		return rhs ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	const LHS_TYPE& lhs ;
+	const STORAGE rhs ;
+	
+} ;
+
+
+
+
+
+/* ifelse( cond, primitive, primitive ) */
+
+template <
+	int RTYPE, 
+	bool COND_NA, typename COND_T
+	>
+class IfElse_Primitive_Primitive : public VectorBase< 
+	RTYPE, 
+	true ,
+	IfElse_Primitive_Primitive<RTYPE,COND_NA,COND_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,COND_NA,COND_T> COND_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
+	
+	IfElse_Primitive_Primitive( const COND_TYPE& cond_, STORAGE lhs_, STORAGE rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		int x = cond[i] ;
+		if( Rcpp::traits::is_na<LGLSXP>(x) ) return Rcpp::traits::get_na<RTYPE>() ;
+		return x ? lhs : rhs ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	STORAGE lhs ;
+	STORAGE rhs ;
+	
+} ;
+
+template <
+	int RTYPE, typename COND_T
+	>
+class IfElse_Primitive_Primitive<RTYPE,false,COND_T> : public VectorBase< 
+	RTYPE, 
+	true ,
+	IfElse_Primitive_Primitive<RTYPE,false,COND_T>
+> {
+public:         
+	typedef Rcpp::VectorBase<LGLSXP,false,COND_T> COND_TYPE ;
+	typedef typename traits::storage_type<RTYPE>::type STORAGE ;
+	
+	IfElse_Primitive_Primitive( const COND_TYPE& cond_, STORAGE lhs_, STORAGE rhs_ ) : 
+		cond(cond_), lhs(lhs_), rhs(rhs_) {
+			/* FIXME : cond, lhs and rhs must all have the sale size */	
+	}
+	
+	inline STORAGE operator[]( int i ) const {
+		return cond[i] ? lhs : rhs ;
+	}
+	
+	inline int size() const { return cond.size() ; }
+	         
+private:
+	const COND_TYPE& cond ;
+	STORAGE lhs ;
+	STORAGE rhs ;
+	
+} ;
+
 } // sugar
 
 template <
@@ -86,6 +332,84 @@ ifelse(
 	){
 	return sugar::IfElse<RTYPE,COND_NA,COND_T,LHS_NA,LHS_T,RHS_NA,RHS_T>( cond, lhs, rhs ) ;
 }
+
+
+template <
+	int RTYPE, 
+	bool COND_NA, typename COND_T, 
+	bool RHS_NA , typename RHS_T
+	>
+inline sugar::IfElse_Primitive_Vector< RTYPE,COND_NA,COND_T,RHS_NA,RHS_T > 
+ifelse( 
+	const Rcpp::VectorBase<LGLSXP,COND_NA,COND_T>& cond,
+	typename traits::storage_type<RTYPE>::type lhs,
+	const Rcpp::VectorBase<RTYPE ,RHS_NA ,RHS_T>& rhs
+	){
+	return sugar::IfElse_Primitive_Vector<RTYPE,COND_NA,COND_T,RHS_NA,RHS_T>( cond, lhs, rhs ) ;
+}
+
+template <
+	int RTYPE, 
+	bool COND_NA, typename COND_T, 
+	bool RHS_NA , typename RHS_T
+	>
+inline sugar::IfElse_Vector_Primitive< RTYPE,COND_NA,COND_T,RHS_NA,RHS_T > 
+ifelse( 
+	const Rcpp::VectorBase<LGLSXP,COND_NA,COND_T>& cond,
+	const Rcpp::VectorBase<RTYPE ,RHS_NA ,RHS_T>& lhs,
+	typename traits::storage_type<RTYPE>::type rhs
+	){
+	return sugar::IfElse_Vector_Primitive<RTYPE,COND_NA,COND_T,RHS_NA,RHS_T>( cond, lhs, rhs ) ;
+}
+
+template< 
+	bool COND_NA, typename COND_T
+>
+inline sugar::IfElse_Primitive_Primitive< REALSXP,COND_NA,COND_T > 
+ifelse( 
+	const Rcpp::VectorBase<LGLSXP,COND_NA,COND_T>& cond,
+	double lhs,
+	double rhs
+	){
+	return sugar::IfElse_Primitive_Primitive<REALSXP,COND_NA,COND_T>( cond, lhs, rhs ) ;
+}
+
+template< 
+	bool COND_NA, typename COND_T
+>
+inline sugar::IfElse_Primitive_Primitive< INTSXP,COND_NA,COND_T > 
+ifelse( 
+	const Rcpp::VectorBase<LGLSXP,COND_NA,COND_T>& cond,
+	int lhs,
+	int rhs
+	){
+	return sugar::IfElse_Primitive_Primitive<INTSXP,COND_NA,COND_T>( cond, lhs, rhs ) ;
+}
+
+template< 
+	bool COND_NA, typename COND_T
+>
+inline sugar::IfElse_Primitive_Primitive< CPLXSXP,COND_NA,COND_T > 
+ifelse( 
+	const Rcpp::VectorBase<LGLSXP,COND_NA,COND_T>& cond,
+	Rcomplex lhs,
+	Rcomplex rhs
+	){
+	return sugar::IfElse_Primitive_Primitive<CPLXSXP,COND_NA,COND_T>( cond, lhs, rhs ) ;
+}
+
+template< 
+	bool COND_NA, typename COND_T
+>
+inline sugar::IfElse_Primitive_Primitive< LGLSXP,COND_NA,COND_T > 
+ifelse( 
+	const Rcpp::VectorBase<LGLSXP,COND_NA,COND_T>& cond,
+	bool lhs,
+	bool rhs
+	){
+	return sugar::IfElse_Primitive_Primitive<LGLSXP,COND_NA,COND_T>( cond, lhs, rhs ) ;
+}
+
 
 } // Rcpp
 
