@@ -236,8 +236,12 @@
 					NumericVector xx(x) ;
 					NumericVector yy(y) ;
 					
-					NumericVector res = ifelse( xx < yy, xx*xx, -(yy*yy) ) ;
-					return res ;
+					return List::create( 
+						_["vec_vec" ]  = ifelse( xx < yy, xx*xx, -(yy*yy) ), 
+						_["vec_prim"]  = ifelse( xx < yy, 1.0  , -(yy*yy) ), 
+						_["prim_vec"]  = ifelse( xx < yy, xx*xx, 1.0      )
+						// , _["prim_prim"] = ifelse( xx < yy, 1.0, 2.0        )
+						) ;
 				'				
 			), 
 			"runit_isna" = list( 
@@ -748,7 +752,12 @@ test.sugar.ifelse <- function( ){
 	fx <- .rcpp.sugar$runit_ifelse
 	x <- 1:10
 	y <- 10:1
-	checkEquals( fx( x, y), ifelse( x<y, x*x, -(y*y) ) )
+	checkEquals( fx( x, y), list( 
+		"vec_vec"   = ifelse( x<y, x*x, -(y*y) ), 
+		"vec_prim"  = ifelse( x<y, 1.0, -(y*y) ), 
+		"prim_vec"  = ifelse( x<y, x*x, 1.0    )
+		# , "prim_prim" = ifelse( x<y, 1.0, 2.0    )
+	) )
 }
 
 
